# codespeak-py

./: .env.local.example  change-request.cs.md  change-request.cs.md   pyproject.toml
.codespeak/: build_insight.json  codespeak_state.json  external_apis.json  implemented_change_requests.json  last_checkpoint_in_user_area.json  last_successful_checkpoint.json  methods_to_test.json  methods_to_test_raw.json  runs_history.json  sha_to_checkpoint.json  spec.processed.md  test_reports.txt
django_app/: ai_service.py  chart_examples.py  models.py  urls.py  views.py
django_app/migrations/: 0001_initial.py  0002_update_model_name.py
django_app/templates/django_app/: analysis.html  base.html  gallery.html  home.html  upload.html
django_proj/: settings.py  urls.py
spec/: main.cs.md
tests/: test_ai_service.py  test_models.py  test_views.py
